--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=test-example-yandex
 
 spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 
 spring.datasource.driverClassName=${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:iamroot}
+
+liquibase.change-log=db/changelog/main-changelog.yaml
